--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,18 @@
 node_modules
 dist
-Dockerfile
 .git
 .gitignore
-.vscode
+README.md
 .env
+.env.local
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+coverage
+.vscode
+.idea
+*.swp
+*.swo
+*.log
